force-app/main/default/objects/ChatMessage__c/ChatMessage__c.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>MSG-{00000000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>