force-app/main/default/objects/ChatMessage__c/fields/AI_Escalated__c.field-meta.xml
<CustomField>
    <fullName>AI_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Escalated</label>
    <type>Checkbox</type>
</CustomField>