force-app/main/default/objects/ChatMessage__c/fields/AI_Helpful__c.field-meta.xml
<CustomField>
    <fullName>AI_Helpful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Helpful</label>
    <type>Checkbox</type>
</CustomField>