force-app/main/default/objects/ChatMessage__c/fields/AI_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Time__c</fullName>
    <inlineHelpText>Milliseconds (performance tracking)</inlineHelpText>
    <label>AI Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>