force-app/main/default/objects/ChatMessage__c/fields/Attachment_Count__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attachment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>