force-app/main/default/objects/ChatMessage__c/fields/Escalated_From__c.field-meta.xml
<CustomField>
    <fullName>Escalated_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated From</label>
    <referenceTo>ChatMessage__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>