force-app/main/default/objects/ChatMessage__c/fields/Final_Target__c.field-meta.xml
<CustomField>
    <fullName>Final_Target__c</fullName>
    <label>Final Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>