force-app/main/default/objects/ChatMessage__c/fields/Journal_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Journal_Access_Token__c</fullName>
    <formula>Journal__r.Access_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Access Token</label>
    <type>Text</type>
</CustomField>