force-app/main/default/objects/ChatMessage__c/fields/Journal_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Journal_External_ID__c</fullName>
    <formula>Journal__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal External ID</label>
    <type>Text</type>
</CustomField>