force-app/main/default/objects/ChatMessage__c/fields/Notification_Platform__c.field-meta.xml
<CustomField>
    <fullName>Notification_Platform__c</fullName>
    <label>Notification Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>