force-app/main/default/objects/ChatMessage__c/fields/Notification_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipient_Email__c</fullName>
    <label>Notification Recipient Email</label>
    <type>Email</type>
</CustomField>