force-app/main/default/objects/ChatMessage__c/fields/Notification_Sent_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_DateTime__c</fullName>
    <label>Notification Sent DateTime</label>
    <type>DateTime</type>
</CustomField>