force-app/main/default/objects/ChatMessage__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <label>Parent Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>