force-app/main/default/objects/ChatMessage__c/fields/Previous_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Case_Status__c</fullName>
    <label>Previous Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>