force-app/main/default/objects/ChatMessage__c/fields/Shared_Document__c.field-meta.xml
<CustomField>
    <fullName>Shared_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Document</label>
    <referenceTo>Shared_Document__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>