force-app/main/default/objects/ChatMessage__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Data Correction</fullName>
            </value>
            <value>
                <fullName>Prenuptial Agreement</fullName>
            </value>
            <value>
                <fullName>Document Adjustment</fullName>
            </value>
            <value>
                <fullName>Conflicting Wills</fullName>
            </value>
            <value>
                <fullName>Undivided Estate</fullName>
            </value>
            <value>
                <fullName>General Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Contact Detail Change</fullName>
            </value>
            <value>
                <fullName>Document Question</fullName>
            </value>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Availability Check</fullName>
            </value>
            <value>
                <fullName>Status Update Request</fullName>
            </value>
            <value>
                <fullName>Personal Data Provided</fullName>
            </value>
            <value>
                <fullName>Document Approval</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduling</fullName>
            </value>
            <value>
                <fullName>Child Custody</fullName>
            </value>
            <value>
                <fullName>Sensitive Legal Conflict</fullName>
            </value>
            <value>
                <fullName>Future Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Death Notification</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>