force-app/main/default/objects/ChatMessage__c/fields/Target_Changed__c.field-meta.xml
<CustomField>
    <fullName>Target_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Target Changed</label>
    <type>Checkbox</type>
</CustomField>