force-app/main/default/objects/ChatMessage__c/fields/Triggered_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered Status Change</label>
    <type>Checkbox</type>
</CustomField>