force-app/main/default/objects/ChatMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Is_Inbound__c</columns>
    <columns>Parent_Record__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>