force-app/main/default/objects/ChatMessage__c/listViews/Chat_Messages_Related_to_Journals.listView-meta.xml
<ListView>
    <fullName>Chat_Messages_Related_to_Journals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Body__c</columns>
    <columns>Journal__c</columns>
    <columns>Is_Inbound__c</columns>
    <columns>Shared_Document__c</columns>
    <columns>Parent_Record__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Journal__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Chat Messages Related to Journals</label>
</ListView>